@@ -44,7 +44,7 @@ README.OSX
 README.VMS
 README.Win32
 SSLeay.xs
-t/data/binary-test.file
+t/data/lorem-ipsum.txt
 t/data/openssl_init_test.conf
 t/data/extended-cert.cert.der
 t/data/extended-cert.cert.dump
